# HITCamera

./: BUILD.gn  CMakeLists.txt  README.en.md  README.md  ohos.build
base/: hitbase.h  ihitcamera_service.h
client/: hitcamera_manager.cpp  hitcamera_service_proxy.cpp
client/include/: hitcamera_service_proxy.h
etc/: BUILD.gn  rpi4b_camera_service.cfg  rpi4b_camera_service.rc
frameworks/kitsimpl/js/: hit_camera_napi.cpp
frameworks/kitsimpl/native/: circular_buffer.cpp  hitcamera_manager.cpp  udp_piece.cpp  udp_piece.h
include/: hitbase.h  hitcamera_handle_class_napi.h  hitcamera_manager.h  hitcamera_service_stub.h
interfaces/kits/js/: @ohos.multimedia.hitcamera.d.ts  BUILD.gn
interfaces/kits/native/: BUILD.gn  circular_buffer.h  hitcamera_manager.h  hitcamera_service_proxy.h  udp_piece.h
sa_profile/: 9902.xml  BUILD.gn
server/: hitcamera_service_impl.cpp  hitcamera_service_stub.cpp  take_picture.cpp
server/include/: hitcamera_service_impl.h  hitcamera_service_stub.h  take_picture.h
service/: ihitcamera_service.cpp
services/: BUILD.gn
services/etc/: BUILD.gn  hit_camera_service.cfg  hit_camera_service.rc
services/include/: hitbase.h  ihitcamera_service.h
services/server/: hitcamera_service_stub.cpp
services/server/include/: hitcamera_service_impl.h  take_picture.h
src/: camera_handle_class_napi.cpp  rpi4b_camera_napi.cpp
test/: BUILD.gn  native_test.cpp  test.cpp  udp_test.cpp
udp/: BUILD.gn  circular_buffer.c  udp-piece-server.c  udp-piece.c  udp-piece.h
