import("//build/ohos.gni")

ohos_shared_library("hit_camera_service") {
    install_enable = true
    sources = [
        "server/take_picture.cpp",
        "server/hitcamera_service_stub.cpp",
        "server/hitcamera_service_impl.cpp",
        "client/hitcamera_service_proxy.cpp"
    ]
    cflags = [
        "-fPIC",
        "-Wall",
    ]
    cflags_cc = cflags
    include_dirs = [
        "//drivers/framework/include/utils/",
        "//foundation/multimedia/hit_camera/service/base",
        "//foundation/multimedia/hit_camera/service/client/include",
        "//foundation/multimedia/hit_camera/service/server/include"
    ]

    if (target_cpu == "arm") {
        cflags += [ "-DBINDER_IPC_32BIT" ]
    }
    external_deps = [
        "hiviewdfx_hilog_native:libhilog",
        "ipc:ipc_core",
        "safwk:system_ability_fwk",
        "samgr_L2:samgr_proxy",
    ]
    part_name = "multimedia_hitcamera"
    subsystem_name = "multimedia"
}
