import("//build/ohos.gni")

ohos_shared_library("rpi4b_camera_service") {
    install_enable = true
    sources = [
        "server/take_picture.cpp",
        "server/hitcamera_service_stub.cpp",
        "server/hitcamera_service_impl.cpp",
        "client/hitcamera_manager.cpp",
        "client/hitcamera_service_proxy.cpp"
    ]
    cflags = [
        "-fPIC",
        "-Wall",
    ]
    cflags_cc = cflags
    include_dirs = [
        "//drivers/framework/include/utils/",
        "//foundation/multimedia/rpi4b_camera_standard/include",
    ]

    if (target_cpu == "arm") {
        cflags += [ "-DBINDER_IPC_32BIT" ]
    }
    external_deps = [
        "hiviewdfx_hilog_native:libhilog",
        "ipc:ipc_core",
        "samgr_L2:samgr_proxy",
        "safwk:system_ability_fwk",
        "utils_base:utils"
    ]
    part_name = "multimedia_rpi4b_camera_standard"
    subsystem_name = "multimedia"
}
