import("//build/ohos.gni")

ohos_prebuilt_etc("rpi4b_camera_service.rc") {
   if (use_musl) {
     source = "rpi4b_camera_service.cfg"
   } else {
     source = "rpi4b_camera_service.rc"
   }
   relative_install_dir = "init"
   part_name = "multimedia_rpi4b_camera_standard"
   subsystem_name = "multimedia"
}
