import("//build/ohos.gni")

ohos_prebuilt_etc("hit_camera_service.rc") {
   if (use_musl) {
     source = "hit_camera_service.cfg"
   } else {
     source = "hit_camera_service.rc"
   }
   relative_install_dir = "init"
   part_name = "multimedia_hit_camera_standard"
   subsystem_name = "multimedia"
}
