# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")

js_declaration("hitcamerajs_js") {
  part_name = "multimedia_hit_camera_standard"
  sources = [ "./@ohos.multimedia.hitcamera.d.ts" ]
}

ohos_copy("hitcamerajs_declaration") {
  sources = [ "./@ohos.multimedia.hitcamera.d.ts" ]
  outputs = [ target_out_dir + "/$target_name/" ]
  module_source_dir = target_out_dir + "/$target_name"
  module_install_name = ""
}

ohos_shared_library("hitcamerajs") {
  subsystem_name = "multimedia"
  part_name = "multimedia_hit_camera_standard"
  relative_install_dir = "module/multimedia"

  include_dirs = [
    "//foundation/multimedia/hit_camera_standard/interfaces/kits/js/include",
    "//foundation/multimedia/hit_camera_standard/interfaces/kits/native",
    "//foundation/multimedia/hit_camera_standard/services/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include/",
    "//utils/native/base/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
  ]

  sources = [
    "//foundation/multimedia/hit_camera_standard/frameworks/kitsimpl/js/hit_camera_napi.cpp",
    "//foundation/multimedia/hit_camera_standard/frameworks/kitsimpl/js/camera_handle_class_napi.cpp",
  ]

  deps = [
    "//utils/native/base:utils",
    "//foundation/ace/napi:ace_napi",
    "//foundation/multimedia/hit_camera_standard/interfaces/kits/native:hit_camera_client",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
  ]
}
