import("//build/ohos.gni")

ohos_shared_library("hit_camera_client") {
    subsystem_name = "multimedia"
    part_name = "multimedia_hit_camera_standard"
    install_enable = true

    sources = [
        "//foundation/multimedia/hit_camera_standard/frameworks/kitsimpl/native/hitcamera_manager.cpp",
        "//foundation/multimedia/hit_camera_standard/frameworks/kitsimpl/native/hitcamera_service_proxy.cpp",
    ]

    include_dirs = [
        "//foundation/multimedia/hit_camera_standard/interfaces/kits/native",
        "//foundation/multimedia/hit_camera_standard/services/include",
    ]

    deps = [
        "//utils/native/base:utils",
        "//foundation/multimedia/hit_camera_standard/services:hit_camera_service",
    ]

    external_deps = [
        "hiviewdfx_hilog_native:libhilog",
        "ipc:ipc_core",
        "samgr_standard:samgr_proxy",
    ]
}
